etc/tests/fuzz/errors/ownership/double-release.nshape
shape ownership-double-release {
  family "compiler-errors/ownership"
  generator "error"
  features ["error", "ownership", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "double release of owned slot 'a'"
  flags "--ownership-strict"
  source ny <<'NY'
use std.core

fn bad() int {
   def a = [1]
   release(a)
   release(a)
   0
}

bad()
NY
}
